--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.31.2",
     "eslint-config-prettier": "^9.1.0",
+    "lodash": "^4.17.21",
     "postgres": "^3.4.4",
     "zod": "^3.23.8"
   },
@@ -24,6 +25,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint__js": "^8.42.3",
+    "@types/lodash": "^4.17.6",
     "@types/node": "^20.14.9",
     "@typescript-eslint/eslint-plugin": "^7.14.1",
     "@typescript-eslint/parser": "^7.14.1",
